fix horizontal scroll on mobile 4

--- a/_sass/elementaire/_layout.scss
+++ b/_sass/elementaire/_layout.scss
@@ -3,7 +3,7 @@
  */
 
 .body-wrapper {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .site-header {
